Bug 1285263 - Restore clips with the proper transform when in CanvasRenderingContext2D::EnsureTarget. r=bas